carousel position overflow clipped to prevent whitespace displaying

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,6 +81,7 @@ hr {
 
 .carousel-position {
     margin: 0 auto;
+    overflow: clip;
 }
 /*--- Logo - index.html ---*/
 .logo-box {
@@ -159,6 +160,9 @@ hr {
     font-size: 24px;
     line-height: 12px;
     color: #ce3434;
+}
+.social-links li{
+    display: inline-block;
 }
 
 /*---Recipe Description - recipe.html---*/
